--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -8,7 +8,7 @@ import PortfolioPreview from '../components/PortfolioPreview.astro';
 import Hero from '../components/Hero.astro';
 import Grid from '../components/Grid.astro';
 
-import ReactHome from '../components/react/App.jsx';
+import App from '../components/react/App.jsx';
 ---
 
 <BaseLayout
@@ -18,7 +18,7 @@ import ReactHome from '../components/react/App.jsx';
   <Hero title="Connect with Fitbit" tagline="Track your fitness journey effortlessly." />
 
   <!-- Render the React Fitbit authentication component inside Astro -->
-  <ReactHome client:load />
+  <App client:only />
 
   <ContactCTA />
 </BaseLayout>
